@@ -18,7 +18,6 @@ import org.jspecify.annotations.Nullable;
 import org.molgenis.vcf.decisiontree.filter.UnsupportedFieldException;
 import org.molgenis.vcf.decisiontree.filter.model.Field;
 import org.molgenis.vcf.decisiontree.filter.model.FieldType;
-import org.molgenis.vcf.utils.UnexpectedEnumException;
 import org.molgenis.vcf.utils.metadata.ValueType;
 
 public class VcfUtils {
@@ -38,24 +37,25 @@ public class VcfUtils {
 
     String missingValue = getMissingValue(field);
     Object value = variantContext.getAttribute(field.getId());
-    if (value == null) {
-      integerValues = List.of();
-    } else if (value instanceof List<?> objectValues) {
-      int size = objectValues.size();
-      if (size == 0) {
-        integerValues = emptyList();
-      } else if (size == 1) {
-        integerValues = singletonList(getVcfValueAsInteger(objectValues.get(0), missingValue));
-      } else {
-        integerValues = new ArrayList<>(objectValues.size());
-        for (Object objValue : objectValues) {
-          integerValues.add(getVcfValueAsInteger(objValue, missingValue));
+    switch (value) {
+      case null -> integerValues = List.of();
+      case List<?> objectValues -> {
+        int size = objectValues.size();
+        if (size == 0) {
+          integerValues = emptyList();
+        } else if (size == 1) {
+          integerValues =
+              singletonList(getVcfValueAsInteger(objectValues.getFirst(), missingValue));
+        } else {
+          integerValues = new ArrayList<>(objectValues.size());
+          for (Object objValue : objectValues) {
+            integerValues.add(getVcfValueAsInteger(objValue, missingValue));
+          }
         }
       }
-    } else if (value instanceof String stringValue) {
-      integerValues = singletonList(getInfoStringValueAsInteger(stringValue, missingValue));
-    } else {
-      throw new TypeConversionException(value, Integer.class);
+      case String stringValue ->
+          integerValues = singletonList(getInfoStringValueAsInteger(stringValue, missingValue));
+      default -> throw new TypeConversionException(value, Integer.class);
     }
 
     return integerValues;
@@ -63,17 +63,12 @@ public class VcfUtils {
 
   private static @Nullable Integer getVcfValueAsInteger(
       @Nullable Object objValue, String missingValue) {
-    Integer intValue;
-    if (objValue == null) {
-      intValue = null;
-    } else if (objValue instanceof Integer integer) {
-      intValue = integer;
-    } else if (objValue instanceof String stringValue) {
-      intValue = getInfoStringValueAsInteger(stringValue, missingValue);
-    } else {
-      throw new TypeConversionException(objValue, Integer.class);
-    }
-    return intValue;
+    return switch (objValue) {
+      case null -> null;
+      case Integer integer -> integer;
+      case String stringValue -> getInfoStringValueAsInteger(stringValue, missingValue);
+      default -> throw new TypeConversionException(objValue, Integer.class);
+    };
   }
 
   private static @Nullable Integer getInfoStringValueAsInteger(
@@ -98,24 +93,24 @@ public class VcfUtils {
     String missingValue = getMissingValue(field);
 
     Object value = variantContext.getAttribute(field.getId());
-    if (value == null) {
-      doubleValues = List.of();
-    } else if (value instanceof List<?> objectValues) {
-      int size = objectValues.size();
-      if (size == 0) {
-        doubleValues = emptyList();
-      } else if (size == 1) {
-        doubleValues = singletonList(getVcfValueAsDouble(objectValues.get(0), missingValue));
-      } else {
-        doubleValues = new ArrayList<>(objectValues.size());
-        for (Object objValue : objectValues) {
-          doubleValues.add(getVcfValueAsDouble(objValue, missingValue));
+    switch (value) {
+      case null -> doubleValues = List.of();
+      case List<?> objectValues -> {
+        int size = objectValues.size();
+        if (size == 0) {
+          doubleValues = emptyList();
+        } else if (size == 1) {
+          doubleValues = singletonList(getVcfValueAsDouble(objectValues.getFirst(), missingValue));
+        } else {
+          doubleValues = new ArrayList<>(objectValues.size());
+          for (Object objValue : objectValues) {
+            doubleValues.add(getVcfValueAsDouble(objValue, missingValue));
+          }
         }
       }
-    } else if (value instanceof String string) {
-      doubleValues = singletonList(getInfoStringValueAsDouble(string, missingValue));
-    } else {
-      throw new TypeConversionException(value, Double.class);
+      case String string ->
+          doubleValues = singletonList(getInfoStringValueAsDouble(string, missingValue));
+      default -> throw new TypeConversionException(value, Double.class);
     }
 
     return doubleValues;
@@ -127,17 +122,12 @@ public class VcfUtils {
 
   private static @Nullable Double getVcfValueAsDouble(
       @Nullable Object objValue, String missingValue) {
-    Double doubleValue;
-    if (objValue == null) {
-      doubleValue = null;
-    } else if (objValue instanceof Double doubleVal) {
-      doubleValue = doubleVal;
-    } else if (objValue instanceof String string) {
-      doubleValue = getInfoStringValueAsDouble(string, missingValue);
-    } else {
-      throw new TypeConversionException(objValue, Double.class);
-    }
-    return doubleValue;
+    return switch (objValue) {
+      case null -> null;
+      case Double doubleVal -> doubleVal;
+      case String string -> getInfoStringValueAsDouble(string, missingValue);
+      default -> throw new TypeConversionException(objValue, Double.class);
+    };
   }
 
   private static @Nullable Double getInfoStringValueAsDouble(
@@ -171,24 +161,24 @@ public class VcfUtils {
       VariantContext variantContext, String id, String missingValue) {
     List<String> strValues;
     Object value = variantContext.getAttribute(id);
-    if (value == null) {
-      strValues = List.of();
-    } else if (value instanceof List<?> objectValues) {
-      int size = objectValues.size();
-      if (size == 0) {
-        strValues = emptyList();
-      } else if (size == 1) {
-        strValues = singletonList(getVcfValueAsString(objectValues.get(0), missingValue));
-      } else {
-        strValues = new ArrayList<>(objectValues.size());
-        for (Object objValue : objectValues) {
-          strValues.add(getVcfValueAsString(objValue, missingValue));
+    switch (value) {
+      case null -> strValues = List.of();
+      case List<?> objectValues -> {
+        int size = objectValues.size();
+        if (size == 0) {
+          strValues = emptyList();
+        } else if (size == 1) {
+          strValues = singletonList(getVcfValueAsString(objectValues.getFirst(), missingValue));
+        } else {
+          strValues = new ArrayList<>(objectValues.size());
+          for (Object objValue : objectValues) {
+            strValues.add(getVcfValueAsString(objValue, missingValue));
+          }
         }
       }
-    } else if (value instanceof String string) {
-      strValues = singletonList(getInfoStringValueAsString(string, missingValue));
-    } else {
-      throw new TypeConversionException(value, String.class);
+      case String string ->
+          strValues = singletonList(getInfoStringValueAsString(string, missingValue));
+      default -> throw new TypeConversionException(value, String.class);
     }
 
     return strValues;
@@ -253,27 +243,19 @@ public class VcfUtils {
     Object typedValue;
     ValueType valueType = field.getValueType();
     String missingValue = getMissingValue(field);
-    switch (valueType) {
-      case INTEGER:
-        typedValue = VcfUtils.getVcfValueAsInteger(stringValue, missingValue);
-        break;
-      case FLAG:
-        typedValue = VcfUtils.getVcfValueAsBoolean(stringValue);
-        break;
-      case FLOAT:
-        typedValue = VcfUtils.getVcfValueAsDouble(stringValue, missingValue);
-        break;
-      case CHARACTER, STRING, CATEGORICAL:
-        typedValue = VcfUtils.getVcfValueAsString(stringValue, missingValue);
-        break;
-      default:
-        throw new UnexpectedEnumException(valueType);
-    }
+    typedValue =
+        switch (valueType) {
+          case INTEGER -> VcfUtils.getVcfValueAsInteger(stringValue, missingValue);
+          case FLAG -> VcfUtils.getVcfValueAsBoolean(stringValue);
+          case FLOAT -> VcfUtils.getVcfValueAsDouble(stringValue, missingValue);
+          case CHARACTER, STRING, CATEGORICAL ->
+              VcfUtils.getVcfValueAsString(stringValue, missingValue);
+        };
     return typedValue;
   }
 
-  public static @Nullable Object getTypedVcfListValue(Field field, String stringValue) {
-    String[] stringValues = stringValue.split(",");
+  public static Object getTypedVcfListValue(Field field, String stringValue) {
+    String[] stringValues = stringValue.split(",", -1);
     List<Object> values = new ArrayList<>();
     for (String value : stringValues) {
       values.add(getTypedVcfValue(field, value));
@@ -282,25 +264,14 @@ public class VcfUtils {
   }
 
   public static FieldType toFieldType(List<String> fields) {
-    String rootField = fields.get(0);
+    String rootField = fields.getFirst();
 
-    FieldType fieldType;
-    switch (rootField) {
-      case "#CHROM", "POS", "ID", "REF", "ALT", "QUAL", "FILTER":
-        fieldType = COMMON;
-        break;
-      case "INFO":
-        fieldType = fields.size() > 2 ? INFO_VEP : INFO;
-        break;
-      case "FORMAT":
-        fieldType = fields.size() > 2 ? GENOTYPE : FORMAT;
-        break;
-      case "SAMPLE":
-        fieldType = SAMPLE;
-        break;
-      default:
-        throw new UnsupportedFieldException(rootField);
-    }
-    return fieldType;
+    return switch (rootField) {
+      case "#CHROM", "POS", "ID", "REF", "ALT", "QUAL", "FILTER" -> COMMON;
+      case "INFO" -> fields.size() > 2 ? INFO_VEP : INFO;
+      case "FORMAT" -> fields.size() > 2 ? GENOTYPE : FORMAT;
+      case "SAMPLE" -> SAMPLE;
+      default -> throw new UnsupportedFieldException(rootField);
+    };
   }
 }
